--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <body>
     <div class="container">
 
+        <button type="button" id="date">Show today's date</button>
+
+        <!-- <form action=""> -->
+        <div>
+            <input type="text" placeholder="Add a new item" id="new-todo">
+            <button type="button" id="enter">Enter!</button>
+        </div>
+        <!-- </form> -->
+
         <div class="header">
             <h1>ToDo List</h1>
         </div>
-
-        <button type="button" id="date">Show today's date</button>
-
-        <h2 id="show-date">[todays date]</h2>
-
-        <form action="">
-            <input type="text" placeholder="Add a new item" id="new-todo">
-            <button type="button" id="enter">Enter!</button>
-        </form>
 
         <ul id="list">
             <!-- items on ToDo list go here! -->
